fix: change text-align h1 in style.css

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   h1 {
     color: black;
     font-family: verdana;
+    text-align: center;
   }
   
   p {
